public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1455/source/compile
source.c: In function ‘main’:
source.c:12:7: error: array size missing in ‘text’
  char text[];
       ^
source.c:13:7: error: array size missing in ‘find’
  char find[];
       ^
